<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="this_app_name">DigiOS Zoom</string>
    
    <string name="invite_acitivity_name">Meeting Invite Example</string>

    <string name="zm_rc_using_fingers_for_remote_control">Remotely control a desktop using gestures</string>
    <string name="zm_rc_one_finger_tap">Tap with one finger</string>
    <string name="zm_rc_one_finger_tap_description">Tap the screen with one finger to click the mouse</string>
    <string name="zm_rc_one_finger_double_taps">Double tap with one finger</string>
    <string name="zm_rc_one_finger_double_taps_description">Double tap with one finger to double click the mouse</string>
    <string name="zm_rc_one_long_tap">Long press with one finger</string>
    <string name="zm_rc_one_long_tap_description">Press the screen with one finger to right-click the mouse</string>
    <string name="zm_rc_two_fingers_scroll">Swipe with two fingers</string>
    <string name="zm_rc_two_fingers_scroll_description">Swipe with two fingers to scroll up and down</string>
    <string name="zm_rc_two_fingers_pinch">Pinch with two fingers</string>
    <string name="zm_rc_two_fingers_pinch_description">Pinch in and out with two fingers to zoom in and out</string>
    <string name="zm_rc_mouse_icon">Mouse icon</string>
    <string name="zm_rc_mouse_icon_description">Drag the mouse icon to move the remote mouse pointer</string>
    <string name="zm_rc_tap_notice">Tap here to control %s\'s screen remotely</string>

    <string name="alert_other_is_sharing">You cannot start screen share while the other participant is sharing.</string>

    <string name="settings_custom_ui">Customized UI</string>
    <string name="settings_video_source">External Video Source</string>
    <string name="settings_switch_domain">Switch domain</string>
    <string name="settings_hide_screen_share_toolbar_annotation">Hide annotation button in screen share</string>
    <string name="settings_hide_screen_share_toolbar_stopshare">Hide stopshare button in screen share</string>

	<string name="zm_msg_interpreter">You have been assigned an interpreter.</string>

    <string name="login_title">Join Zoom Call</string>
    <string name="login_username_hint">Username</string>
    <string name="login_meeting_id_hint">Meeting ID</string>
    <string name="login_zak_hint">Input zoom meeting token(option)</string>
    <string name="login_meeting_password_hint">Meeting password</string>
    <string name="login_meeting_password_label">Password</string>
    <string name="login_remember_me_label">Remember me</string>
    <string name="login_join_label">Join</string>
    <string name="login_settings_label">Settings</string>
    <string name="login_return_meeting_label">Return Meeting</string>
    <string name="login_loading_label">Loading…</string>
    <string name="connecting_label">Connecting…</string>

    <string name="waiting_room_meeting_not_started">Wait host to start this meeting…</string>
    <string name="waiting_room_meeting_not_admitted">Host will let you in soon…</string>

    <string name="dialog_exit_host">End or leave meeting</string>
    <string name="dialog_exit_attendee">Leave meeting</string>
    <string name="dialog_action_end">End</string>
    <string name="leave_meeting_label">Leave</string>
    <string name="dialog_action_leave_breakout">Leave BO</string>

    <string name="breakout_room_join">Join Breakout</string>
    <string name="breakout_room_help">Request for Help</string>


    <string name="meeting_stop_share">Stop share</string>
    <string name="meeting_start_share">Share</string>
    <string name="meeting_audio">Audio</string>
    <string name="meeting_speaker">Speaker</string>
    <string name="meeting_video">Video</string>
    <string name="meeting_share">Share</string>
    <string name="meeting_chats">Chats</string>
    <string name="meeting_more">More</string>
    <string name="meeting_shrink">Shrink</string>


</resources>
