<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/zm_top_toolbar_bg"
    android:baselineAligned="false"
    android:descendantFocusability="afterDescendants"
    android:focusable="false"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/audioButton"
        style="@style/DigiOS.ButtonStyle.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_meeting_audio"
        android:focusable="true"
        android:singleLine="true"
        android:text="@string/meeting_audio"
        android:nextFocusLeft="@+id/leaveButton"
        android:textAllCaps="true"
        android:textColor="@color/secondaryVariant"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cameraButton"
        style="@style/DigiOS.ButtonStyle.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_meeting_video"
        android:focusable="true"
        android:singleLine="true"
        android:text="@string/meeting_video"
        android:textAllCaps="true"
        android:textColor="@color/secondaryVariant"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/shareButton"
        style="@style/DigiOS.ButtonStyle.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_share_resume"
        android:focusable="true"
        android:singleLine="true"
        android:text="@string/meeting_share"
        android:textAllCaps="true"
        android:textColor="@color/secondaryVariant"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/chatButton"
        style="@style/DigiOS.ButtonStyle.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/zm_btn_plist"
        android:focusable="true"
        android:singleLine="true"
        android:text="@string/meeting_chats"
        android:textAllCaps="true"
        android:textColor="@color/secondaryVariant"
        android:textSize="15sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/moreActionButton"
        style="@style/DigiOS.ButtonStyle.Normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:nextFocusRight="@+id/backButton"
        android:drawableTop="@drawable/zm_btn_more"
        android:focusable="true"
        android:singleLine="true"
        android:text="@string/meeting_more"
        android:textAllCaps="true"
        android:textColor="@color/secondaryVariant"
        android:textSize="15sp"
        android:visibility="gone" />
</LinearLayout>
