<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:descendantFocusability="afterDescendants"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username_hint"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_name"
            style="@style/Basic.EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="afterDescendants"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_meeting_password_label"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_pwd"
            style="@style/Basic.EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_meeting_password_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:nextFocusLeft="@id/btn_ok"
            android:nextFocusRight="@id/btn_leave" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:descendantFocusability="afterDescendants"
        android:focusable="true">

        <Button
            android:id="@+id/btn_leave"
            style="@style/Basic.ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:nextFocusLeft="@id/edit_pwd"
            android:nextFocusRight="@id/btn_ok"
            android:layout_marginEnd="10dp"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/Basic.ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:nextFocusLeft="@id/btn_leave"
            android:nextFocusRight="@id/edit_pwd"
            android:layout_marginStart="10dp"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>
