<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center_horizontal">

        <FrameLayout
            android:id="@+id/meetingVideoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <FrameLayout
            android:id="@+id/shareContentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignWithParentIfMissing="true"
            android:orientation="vertical">

            <us.zoom.sdk.MobileRTCShareView
                android:id="@+id/sharingView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <us.zoom.sdksample.inmeetingfunction.customizedmeetingui.view.share.AnnotateToolbar
                android:id="@+id/drawingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:visibility="gone" />

            <us.zoom.sdk.MobileRTCVideoView
                android:id="@+id/localShareView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="top|end"
                android:visibility="gone" />

            <!--Minimized -->
            <us.zoom.sdksample.inmeetingfunction.customizedmeetingui.rawdata.RawDataRender
                android:id="@+id/localShareRender"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="top|end"
                android:visibility="gone"/>
        </FrameLayout>

        <us.zoom.sdksample.inmeetingfunction.customizedmeetingui.view.VideoListLayout
            android:id="@+id/videoListLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentBottom="true"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="vertical"/>
    </RelativeLayout>

    <Button
        android:id="@+id/joinBreakoutButton"
        style="@style/Basic.ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="3dp"
        android:text="@string/breakout_room_join"
        android:textSize="11sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/requestHelpButton"
        style="@style/Basic.ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="3dp"
        android:text="@string/breakout_room_help"
        android:textSize="11sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/connectingLabel"
        style="@style/MessageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting_label"
        android:visibility="gone" />

    <include
        android:id="@+id/progressPanel"
        layout="@layout/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <us.zoom.sdksample.inmeetingfunction.customizedmeetingui.view.MeetingOptionBar
        android:id="@+id/meetingOptionBar"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:descendantFocusability="afterDescendants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <!-- TODO: Not needed for demo -->
    <ImageView
        android:id="@+id/appsView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@null"
        android:focusable="false"
        android:src="@drawable/icon_view_apps"
        android:visibility="gone" />

    <!-- TODO: Not needed for demo -->
    <LinearLayout
        android:id="@+id/langLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/zm_bg_float_gray"
        android:padding="2dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_lan1"
            style="@style/Basic.ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/selector_lans"
            android:padding="10dp"
            android:textColor="@color/lan_text_selector"
            android:textSize="11sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_lan2"
            style="@style/Basic.ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_lans"
            android:focusable="true"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textColor="@color/lan_text_selector"
            android:textSize="11sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>